Changes for libmusicbrainz 3.0.3
--------------------------------

   - Use Requires.private instead of Requires for dependencies in
     libmusicbrainz3.pc
   - ISRC, rating and release group support
   - Full label support including search queries
   - C wrappers for extractFragment and extractUuid

Changes for libmusicbrainz 3.0.2
--------------------------------

   - Added mb_track_get_artist to the C API. (#3817)
   - Fix incorrect string comparision in the XML parser code. (#3614)
   - Fix compilation on GCC 4.3 (#3490 and #3613, patch by Ross Burton
     and "dirtyepic")

Changes for libmusicbrainz 3.0.1
--------------------------------

   - Fixed mb_query_get_tracks function name in mb_c.h.
   - Detect correctly installed libdiscid in src/disc.cpp.
   - Support for releaseEvents in ArtistIncludes. (#2974)
   - Support for catalog numbers and barcodes.
   - Added Release::TYPE_PSEUDO_RELEASE.
   - Added mb_release_get_artist to the C API, patch by Ross Burton.

Changes for libmusicbrainz 3.0.0 (2007-05-12)
---------------------------------------------

   - Use CMake as the only build system.

Changes for libmusicbrainz 3.0.0beta3
-------------------------------------

   - C bindings for artist/release/track collections.
   - New cdlookup_c.c example.

Changes for libmusicbrainz 3.0.0beta2
-------------------------------------

   - Fixed MusicBrainz::extractUuid for non-artist IDs.
   - Implementation of release types.
   - Implementation of release lists on track level.
   - New cdlookup.cpp example.

Changes for libmusicbrainz 3.0.0beta1
-------------------------------------

   - Rewritten from scratch, libmusicbrainz now uses the new XML web service.
   - New object oriented API in C++ based on python-musicbrainz2, with
     GLib-style C bindings.


******************************************************************************
******************************************************************************